# noka.moe

./: .env  .gitignore  Dockerfile  LICENSE  README.md  README_KO.md  TODO.md  app.py  data.example.json  data.json  index.html  main.py  pyproject.toml  redika.text  requirements.txt
files/: test.redi  test.txt
templates/: embeded.html  file_not_found.html  index.html  main.html
