[project]
name = "noka-moe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.1",
    "flask==3.1.2",
    "gunicorn>=23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "python-dotenv==1.2.1",
    "werkzeug==3.1.4",
]
